@@ -270,7 +270,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <forkMode>pertest</forkMode>
-                    <forkedProcessTimeoutInSeconds>180</forkedProcessTimeoutInSeconds>
+                    <forkedProcessTimeoutInSeconds>2700</forkedProcessTimeoutInSeconds>
                     <systemProperties>
                         <property>
                             <name>com.gatespace.bundle.cm.store</name>
